@@ -1,39 +1,80 @@
-class Point3D extends Point {
+package SPVM::Point3D;
+
+1;
+
+=head1 NAME
+
+SPVM::Point3D - Point 3D
+
+=head1 SYNOPSYS
+
+  use Point3D;
   
-  has z : rw int;
+  my $point = Point3D->new;
+  my $point = Point3D->new_xyz(1, 2, 3);
+
+  $point->set_x(1);
+  $point->set_y(2);
+  $point->set_z(3);
   
-  static method new : Point () {
-    return new Point3D;
-  }
+  my $x = $point->x;
+  my $y = $point->y;
+  my $y = $point->z;
   
-  static method new_xyz : Point ($x : int, $y : int, $z : int) {
-    my $self = Point3D->new;
-    
-    $self->set_x($x);
-    $self->set_y($y);
-    $self->set_z($z);
-    
-    return $self;
-  }
-  
-  method clear : void () {
-    $self->{x} = 0;
-    $self->{y} = 0;
-  }
-  
-  method to_string : string () {
-    my $x = $self->x;
-    my $y = $self->y;
-    my $z = $self->z;
-    
-    my $string = "($x,$y,$z)";
-    
-    return $string;
-  }
-  
-  method cloneable_clone : object () {
-    my $self_clone = Point->new_xyz($self->x, $self->y, $self->z);
-    
-    return $self_clone;
-  }
-}
+  my $point_string = $point->to_string;
+
+=head1 DESCRIPTION
+
+C<Point3D> is a class for a point 3D.
+
+=head1 Super Class
+
+L<Point|SPVM::Point> is the super class of C<Point3D>.
+
+=head1 Interfaces
+
+C<Point3D> inherits the interfaces of L<Point|SPVM::Point>.
+
+=head1 CLASS METHODS
+
+=head2 new
+
+  method new : Point3D ()
+
+Create a new C<Point3D> object.
+
+=head2 new_xyz
+
+  method new_xyz : Point3D ($x : int, $y : int, $z : int)
+
+Create a new C<Point3D> object with x, y, and z.
+
+=head1 INSTANCE METHODS
+
+C<Point3D> inherits the methods of L<Point|SPVM::Point>, and implements the following methods.
+
+=head2 z
+
+  method z : int ()
+
+Get C<z> field.
+
+=head2 set_z
+
+  void set_z : int ($z : int)
+
+Set C<x> field.
+
+=head2 to_string
+
+  method to_string : string ();
+
+Convert the C<Point3D> object to a string as the following.
+
+  (1,2,3)
+
+=head2 cloneable_clone
+
+  method cloneable_clone : object ()
+
+Clone a C<Point3D> object by create a new C<Point3D> object and C<x>, C<y>, C<z> fields are copied to the new object.
