@@ -1,35 +1,39 @@
-class Point {
-  interface Stringable;
-  interface Cloneable;
+class Point3D extends Point {
   
-  has x : rw int;
-  has y : rw int;
-  
-  static method new : Point () {
-    return new Point;
+  has z : rw int;
+
+  static method new : Point3D () {
+    return new Point3D;
   }
   
-  static method new_xy : Point ($x : int, $y : int) {
-    my $point = Point->new;
+  static method new_xyz : Point3D ($x : int, $y : int, $z : int) {
+    my $self = Point3D->new;
     
-    $point->set_x($x);
-    $point->set_y($y);
+    $self->set_x($x);
+    $self->set_y($y);
+    $self->set_z($z);
     
-    return $point;
+    return $self;
+  }
+
+  method clear : void () {
+    $self->SUPER::clear;
+    $self->{z} = 0;
   }
   
   method to_string : string () {
     my $x = $self->x;
     my $y = $self->y;
+    my $z = $self->z;
     
-    my $string = "($x,$y)";
+    my $string = "($x,$y,$z)";
     
     return $string;
   }
   
   method cloneable_clone : object () {
-    my $point_clone = Point->new_xy($self->x, $self->y);
+    my $self_clone = Point3D->new_xyz($self->x, $self->y, $self->z);
     
-    return $point_clone;
+    return $self_clone;
   }
 }
