@@ -5,6 +5,10 @@
   * Fields alignment rule become the same as C language.
   * Improve compilation error messages.
   * Add clear method to Point class.
+  * Add Point3D class.
+  * Add the inheritance feature.
+    Add extends keyword.
+    Add SUPER:: method call.
   [BUG FIX]
   * Fix the bug that the name of method call doesn't distinguish class methods and instance methods.
 0.9612 2022-06-23
